[package]
name = "advent-of-code-2021"
authors = ["Drew Wyatt <drew.j.wyatt@gmail.com>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "advent"
path = "src/lib.rs"

[[bin]]
name = "day-1"
[[bin]]
name = "day-2"
[[bin]]
name = "day-3"
[[bin]]
name = "day-4"
[[bin]]
name = "day-5"
[[bin]]
name = "day-6"


[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
